k8s/apps/default/znc/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app znc
  labels:
    app: *app
spec:
  selector:
    matchLabels:
      app: *app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: *app
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      hostname: *app
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: *app
        - name: tls
          secret:
            secretName: znc-tls
            defaultMode: 0440
        - name: tls-pem
          emptyDir: {}
        - name: custom-init
          configMap:
            name: znc-custom-init
            defaultMode: 0775
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: *app
          image: ghcr.io/linuxserver/znc:1.10.3@sha256:b144ed358744eebe779fcca8e4a646ddd8389116cd185849cb2af183d0acb7cb
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6501
              name: web
            - containerPort: 6697
              name: irc-tls
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: tls-pem
              mountPath: /config/znc.pem
              subPath: znc.pem
              readOnly: true
            - name: custom-init
              mountPath: /custom-cont-init.d/disable-protected-web-sessions.sh
              subPath: disable-protected-web-sessions.sh
              readOnly: true
          startupProbe:
            tcpSocket:
              port: web
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            tcpSocket:
              port: web
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: web
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
