k8s/apps/default/znc/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app znc
  labels:
    app: *app
spec:
  type: ClusterIP
  selector:
    app: *app
  ports:
    - name: web
      port: 6501
      targetPort: web
      protocol: TCP
    - name: irc-tls
      port: 6697
      targetPort: irc-tls
      protocol: TCP
